<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_list"
    tools:context="ims.vn.androiddms.MainActivity">
    <LinearLayout
        android:background="@color/header_list_statistical"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginLeft="@dimen/marginleftandright"
            android:gravity="center|left"
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/thoigian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/noidung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center|right"
            android:layout_marginRight="@dimen/marginleftandright"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sotien"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ListView
            android:id="@+id/lvStatistical_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/footer_list_statistical"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:gravity="center|left"
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/tongcong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
