<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e9161616">

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_button_khaibaovitri"
        android:layout_marginRight="@dimen/margin_floatactionbutton"
        android:clickable="true"
        android:src="@drawable/ic_location"
        app:backgroundTint="@color/xanhnon"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="9dp"
        app:rippleColor="@color/btnsetting" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_button_themkh"
        android:layout_marginRight="@dimen/margin_floatactionbutton"
        android:clickable="true"
        android:src="@drawable/ic_create"
        app:backgroundTint="@color/xanhnon"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="9dp"
        app:rippleColor="@color/checkin" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_button_guidulieu"
        android:layout_marginRight="@dimen/margin_floatactionbutton"
        android:clickable="true"
        android:src="@drawable/ic_plane"
        app:backgroundTint="@color/xanhdam"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="9dp"
        app:rippleColor="@color/checkin" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/margin_floatactionbutton"
        android:layout_marginRight="@dimen/margin_floatactionbutton"
        android:clickable="true"
        android:src="@drawable/ic_right"
        app:backgroundTint="@color/btnsetting"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="9dp"
        app:rippleColor="@color/checkin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_text_themkh"
        android:layout_marginRight="@dimen/marginright_text"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:text="@string/themkhachhang"
        android:textColor="@color/textXanh"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_text_dongbodl"
        android:layout_marginRight="@dimen/marginright_text"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:text="@string/dongbodulieu"
        android:textColor="@color/textXanh"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_text_khaibaovitri"
        android:layout_marginRight="@dimen/marginright_text"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:text="@string/khaibaovitri"
        android:textColor="@color/textXanh"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_text_guidulieu"
        android:layout_marginRight="@dimen/marginright_text"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:text="@string/guidulieu"
        android:textColor="@color/textXanh"
        android:textStyle="italic" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_button_sx"
        android:layout_marginRight="@dimen/margin_floatactionbutton"
        android:clickable="true"
        android:src="@drawable/ic_shuffle"
        app:backgroundTint="@color/xanhnon"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="9dp"
        app:rippleColor="@color/checkin" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_button_dongbodl"
        android:layout_marginRight="@dimen/margin_floatactionbutton"
        android:clickable="true"
        android:src="@drawable/ic_load"
        app:backgroundTint="@color/xanhdam"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="9dp"
        app:rippleColor="@color/checkin" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/marginbottom_text_sapxep"
        android:layout_marginRight="@dimen/marginright_text"
        android:paddingLeft="@dimen/text_pading_lr"
        android:paddingRight="@dimen/text_pading_lr"
        android:text="@string/sapxeptheokhoangcach"
        android:textColor="@color/textXanh"
        android:textStyle="italic"
       />
</FrameLayout>
