<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/borderproduct"
    android:orientation="horizontal"
    tools:context="ims.vn.androiddms.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|left">

            <TextView
                android:textSize="@dimen/textsize_name"
                android:id="@+id/txtTenSp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="abcxyz"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|left">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:text="@string/giachan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:id="@+id/txtGiaChan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:text="@string/giale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:id="@+id/txtGiaLe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|left">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:text="@string/tonchan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:id="@+id/txtTonChan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:text="@string/tonle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/textsize_name"
                    android:textColor="@color/text_color_list"
                    android:id="@+id/txtTonLe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="5dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbcheck"
                android:buttonTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:textSize="@dimen/textsize_buttonthem"
                android:clickable="true"
                android:background="@drawable/button_green"
                android:text="@string/xemthem"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
