<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_decript_fab"
    tools:context="ims.vn.androiddms.MainActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginLeft="@dimen/marginleftandright"
            android:gravity="center|left"
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/sampham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/slban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/slban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="@dimen/marginleftandright"
            android:gravity="center|right"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/textsize_statistical"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/hansd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="@dimen/widthbuttonstockthemsp_checkin"
                android:layout_height="@dimen/heightbutton_checkin"
                android:background="@drawable/button_xanhnon">

                <LinearLayout
                    android:id="@+id/btnthemsp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="takePhoto">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_tag_white_shape" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/themsp"
                            android:textColor="@color/text_decript_fab"
                            android:textSize="@dimen/textsize_button_visit" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="@dimen/widthbuttonstock_checkin"
                android:layout_height="@dimen/heightbutton_checkin"
                android:background="@drawable/button_xanhnon">

                <LinearLayout
                    android:id="@+id/btnLuu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:onClick="takePhoto">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_download_white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|left">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/luubaocao"
                            android:textColor="@color/text_decript_fab"
                            android:textSize="@dimen/textsize_button_visit" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
